--- a/index.html
+++ b/index.html
@@ -2292,8 +2292,8 @@
 
     <footer class="footer">
         This is an unofficial Star Citizen fansite, not affiliated with the Cloud Imperium group of companies.<br>
-        © 2025 Wednesdaywoe<br>
-        <a href="https://www.youtube.com/@wednesdaywoeplays" target="_blank">https://www.youtube.com/@wednesdaywoeplays</a>
+        2025 Wednesdaywoe<br>
+        <a href="https://www.youtube.com/@wednesdaywoeplays" target="_blank">youtube.com/@wednesdaywoeplays</a>
     </footer>
 </body>
 </html>
