--- a/index.html
+++ b/index.html
@@ -2288,7 +2288,7 @@
         }
     </script>
 
-    <button class="btn-reset" onclick="resetAll()" title="Reset all data and preferences">🔄 Reset All</button>
+    <button class="btn-reset" onclick="resetAll()" title="Reset all data and preferences">Reset All</button>
 
     <footer class="footer">
         This is an unofficial Star Citizen fansite, not affiliated with the Cloud Imperium group of companies.<br>
