--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                     <option value="wednesday">Wednesday</option>
                     <option value="moonshine">Moonshine</option>
                     <option value="argo">ARGO</option>
+                    <option value="cassette">Cassette</option>
                     <option value="cargo-explorer">Cargo Explorer</option>
                 </select>
             </div>
