--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Hauler Helper - Star Citizen</title>
     <link rel="stylesheet" href="css/themes.css">
     <link rel="stylesheet" href="css/main.css">
+    <!-- OCR Mappings for consistent name normalization -->
+    <script src="js/data/ocr-mappings.js"></script>
 </head>
 <body data-theme="stardust">
     <div class="container">
