--- a/index.html
+++ b/index.html
@@ -211,9 +211,7 @@
 
         <script src="js/data/theme-colors.js?v=20250106"></script>
         <script src="js/data/ships.js?v=20250106"></script>
-        <script src="js/data/locations.js?v=20250106"></script>
-        <script src="js/data/commodities.js?v=20250106"></script>
-        <script src="js/data/payouts.js?v=20250106"></script>
+        <!-- locations.js, commodities.js, and payouts.js removed - now using global-* versions in <head> -->
         <script src="js/data/autofill-patterns.js?v=20250106"></script>
 
         <!-- NEW MODULES -->
