--- a/index.html
+++ b/index.html
@@ -804,7 +804,7 @@
 
             // Main initialization function
             function init() {
-                console.log('%c🎯 HAULER HELPER v4.0.0', 'background: #4dd4ac; color: #000; font-size: 16px; padding: 8px;');
+                console.log('%c🎯 HAULER HELPER', 'background: #4dd4ac; color: #000; font-size: 16px; padding: 8px;');
                 checkForOCRImport();
                 // Check if modules are loaded
             const requiredFunctions = [
